--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -1,4 +1,4 @@
-<ion-view view-title="ЖЕЛТОЕ ТАКСИ" scroll="false">
+<ion-view view-title="GROZTAXI.RU" scroll="false">
   <ion-content scroll="false">
     <div class="list padding" style="margin-bottom: 0px">
       <ion-slide-box ng-init="disableSwipe()"
