--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -18,7 +18,7 @@
       <img style="width: 100%; height: 100%" src="img/logo.png" >
       <!--<h1 class="title">Меню</h1>-->
     </ion-header-bar>
-    <ion-content>
+    <ion-content class="dark">
       <ion-list>
         <ion-item nav-clear menu-close href="#/app/services">
           УСЛУГИ
